完善管理员功能

--- a/QQWeb/src/main/resources/templates/index_2.html
+++ b/QQWeb/src/main/resources/templates/index_2.html
@@ -27,11 +27,11 @@
                     </li>
                     <li id="rb_box2">
                         <h id="rtword5">新密码：</h>
-                        <input type="text" id="rtinput5">
+                        <input type="password" id="rtinput5">
                     </li>
                     <li id="rb_box2">
                         <h id="rtword6">确认密码：</h>
-                        <input type="text" id="rtinput6">
+                        <input type="password" id="rtinput6">
                     </li>
                     <input type="submit" id="btn2" value="确认">
                 </ul>
