完善管理员忘记密码 并实现多种后台功能

--- a/QQWeb/src/main/resources/templates/index_3.html
+++ b/QQWeb/src/main/resources/templates/index_3.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/index_3.css">
 <script src="js/jqku.js"></script>
 <script src="js/index.js"></script>
+<script src="js/ajax_2update.js"></script>
 </head>
 <body>
     <div id="register3">
@@ -26,13 +27,13 @@
                     </li>
                     <li id="rb_box3">
                         <h id="rtword8">新密码：</h>
-                        <input type="text" id="rtinput8">
+                        <input type="password" id="rtinput8">
                     </li>
                     <li id="rb_box3">
                         <h id="rtword9">确认密码：</h>
-                        <input type="text" id="rtinput9">
+                        <input type="password" id="rtinput9">
                     </li>
-                    <button id="btn3"><a href="#">确认</a></button>
+                    <input type="submit" id="btn3" value="确认">
                 </ul>
             </div>
         </div>
