--- a/QQWeb/src/main/resources/templates/index1_1.html
+++ b/QQWeb/src/main/resources/templates/index1_1.html
@@ -12,7 +12,7 @@
 <body>
     <div id="main">
         <div id="box">   
-            <div id="left"></div>
+            <div id="left"><a href="#">欢迎欢迎${sessionScope.USER.name}</a></div>
         </div>
     </div>
 </body>
