实现上传个性签名功能

--- a/QQWeb/src/main/resources/templates/index1_1.html
+++ b/QQWeb/src/main/resources/templates/index1_1.html
@@ -5,14 +5,141 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/index1_1.css">
 <script src="js/jqku.js"></script>
-<script src="js/index.js"></script>
+<script src="js/index1_1.js"></script>
 </head>
 <body>
     <div id="main">
-        <div id="box">   
-            <div id="left"><a href="#">欢迎欢迎${sessionScope.USER.name}</a></div>
+        <div id="box">
+            <div id="left">
+                <ul>
+                    <li>
+                        <a href="person_main">
+                            <p class="iconfont icon-sangedian"></p>
+                        </a>
+                    </li>
+                    <li>
+                        <div id="photo1">
+                            <img src="img/4.jpg">
+                        </div>
+                    </li>
+                    <li>
+                        <p class="iconfont icon-xiazai16"></p>
+                    </li>
+                    <li>
+                        <p class="iconfont icon-icon_zhanghao"></p>
+                    </li>
+                </ul>
+                <div id="add">+</div>
+            </div>
+            <div id="addfri">
+                <div id="add_top">添加好友
+                    <p id="af">×</p>
+                </div>
+                <div id="add_search">输入账号
+                    <input type="text">
+                    <div class="iconfont icon-sousuo">查找</div>
+                </div>
+                <div id="add_result">
+                    <p id="arp1">查找结果</p>
+                    <div id="result">
+                        <div id="re_img">
+                            <img src="img/8.jpg" alt="">
+                        </div>
+                        <p>TaeYong</p>
+                        <h4>浙江温州 男</h4>
+                        <span>+添加</span>
+                    </div>
+                </div>
+            </div>
+            <div id="mid">
+                <div id="mid_top">
+                    <input type="text">
+                </div>
+                <div id="mid_body">
+                    <ul>
+                        <li>
+                            <div id="mbody_one_top">
+                                <div id="mbody_one_top1">
+                                   <a href="else.html"><img src="img/3.jpg" alt=""></a>
+                                </div>
+                                <p id="mot1">JaeHyun</p>
+                                <p id="mot2">09:00</p>
+                            </div>
+                            <div id="mbody_one_body">
+                                First, I want to tell you how proud we are. Getting into Columbia and Sydney and so on.
+                            </div>
+                        </li>
+                        <li>
+                            <div id="mbody_one_top">
+                                <div id="mbody_one_top1">
+                                        <a href="else.html"><img src="img/5.jpg" alt=""></a>
+                                </div>
+                                <p id="mot1">JaeMin</p>
+                                <p id="mot2">09:00</p>
+                            </div>
+                            <div id="mbody_one_body">
+                                First, I want to tell you how proud we are. Getting into Columbia and Sydney and so on.
+                            </div>
+                        </li>
+                        <li>
+                            <div id="mbody_one_top">
+                                <div id="mbody_one_top1">
+                                        <a href="else.html"><img src="img/6.jpg" alt=""></a>
+                                </div>
+                                <p id="mot1">RenJun</p>
+                                <p id="mot2">09:00</p>
+                            </div>
+                            <div id="mbody_one_body">
+                                First, I want to tell you how proud we are. Getting into Columbia and Sydney and so on.
+                            </div>
+                        </li>
+                        <li>
+                            <div id="mbody_one_top">
+                                <div id="mbody_one_top1">
+                                        <a href="else.html"><img src="img/7.jpg" alt=""></a>
+                                </div>
+                                <p id="mot1">ChenLe</p>
+                                <p id="mot2">09:00</p>
+                            </div>
+                            <div id="mbody_one_body">
+                                First, I want to tell you how proud we are. Getting into Columbia and Sydney and so on.
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="right">
+                <div id="ri_top">
+                    <p id="ri_top_p1">……</p>
+                </div>
+                <div id="ri_main">
+                    <div id="ri_body">
+                        <div id="right_body_1">
+                            <div id="rb11">
+                                <img src="img/5.jpg" id="right_img">
+                            </div>
+                            <div id="rb12"></div>
+                            <div id="rb13">First, I want to tell you how proud we are.</div>
+                        </div>
+                        <div id="right_body_2">
+                            <div id="rb14"></div>
+                            <div id="rb15">First, I want to tell you how proud we are.</div>
+                            <div id="rb16">
+                                <img src="img/4.jpg">
+                            </div>
+                        </div>
+                    </div>
+                    <div id="ri_foot">
+                        <p class="iconfont icon-xiaolian"></p>
+                        <input type="text">
+                        <p class="iconfont icon-fasong-tijiao"></p>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
