--- a/QQWeb/src/main/resources/static/css/index1_1.css
+++ b/QQWeb/src/main/resources/static/css/index1_1.css
@@ -6,6 +6,10 @@
 html,body{
     height: 100%;
 }
+img{
+    width: 100%;
+    height: 100%;
+}
 #main{
     height: 100%;
     width: 100%;
@@ -22,9 +26,427 @@ html,body{
     border-radius: 6px;
     overflow: hidden;
 } 
+#addfri{
+    width: 60%;
+    height: 43%;
+    /* background-color: red; */
+    position: absolute;
+    top: 25%;
+    left: 22%;
+    z-index: 10;
+    border-radius: 8px;
+    overflow:hidden;
+    display: none;
+    box-shadow: -10px 0 20px 0 #ccc,  10px 0 20px  0 #ccc, 0 10px 20px 0 #ccc, 0 -10px 20px 0 #ccc;
+}
+#add_top{
+    position: relative;
+    width: 100%;
+    height: 17%;
+    background-color: #3782f5;
+    color: #fff;
+    line-height: 2.4;
+    text-align: center;
+}
+#add_top p{
+    width: 6%;
+    height: 100%;
+    font-size: 25px;
+    color: #fff;
+    line-height: 1.6;
+    position: absolute;
+    right: 2%;
+    top: 0;
+    cursor: pointer;
+}
+#add_search{
+    width: 100%;
+    height: 32%;
+    border-bottom: 1px solid #ccc;
+    background-color: #fff;
+    padding: 5% 5%;
+    color: #636365;
+    /* position: absolute; */
+
+}
+#add_search input{
+    width: 60%;
+    height: 100%;
+    outline: none;
+    border-radius: 4px;
+}
+a{
+    text-decoration: none;
+}
+#add_search div{
+    width: 18%;
+    height: 14%;
+    background-color: #3782f5;
+    position: absolute;
+    right: 5%;
+    top: 27%;
+    border-radius: 4px;
+    font-size: 18px;
+    color: #fff;
+}
+.icon-sousuo{
+    font-size: 20px;
+    color: #fff;
+    line-height: 1.6;
+    padding: 0% 3%;
+}
+#add_result{
+    width: 100%;
+    height: 51%;
+    background-color: #fff;
+    padding: 5% 5%;
+    position: relative;
+}
+#arp1{
+    /* font-size: 17px; */
+    color: #636365;
+}
+#result{
+    position: absolute;
+    width: 65%;
+    height: 60%;
+    /* background-color: red; */
+    right: 5%;
+    top: 20%;
+}
+#result p{
+    color: #456d9e;
+    font-size: 23px;
+    position: absolute;
+    top: 15%;
+    left: 26%;
+}
+#result h4{
+    font-size: 14px;
+    color: #636365;
+    position: absolute;
+    bottom: 15%;
+    left: 26%;
+}
+#result span{
+    width: 22%;
+    height: 40%;
+    background-color: #3782f5;
+    position: absolute;
+    top: 34%;
+    right: 5%;
+    text-align: center;
+    line-height: 1.6;
+    border-radius: 4px;
+    color: #fff;
+}
+#re_img{
+    width: 22%;
+    height: 100%;
+    background-color: #2d7bb9;
+    border-radius: 100%;
+    overflow: hidden;
+}
 #left{
-    width: 15%;
+    width: 12%;
     height: 100%;
     background-color: #3880f6;
-    
+    float: left;
+    position: relative;
 }
+#left ul{
+    width: 100%;
+    height: 70%;
+}
+#left li{
+    width: 100%;
+    height: 25%;
+    /* background-color: #3071d7; */
+    /* margin-bottom: 18px; */
+    position: relative;
+}
+.change1{
+    width: 100%;
+    height: 25%;
+    background-color: #3071d7;
+    /* margin-bottom: 18px; */
+    position: relative;
+}
+.icon-sangedian{
+    /* border: 1px solid #fff; */
+    font-size: 40px;
+    color: #fff;
+    margin-left: 28%;
+}
+#photo1{
+    width: 80%;
+    height: 84%;
+    background-color: #fff;
+    border-radius: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 7%;
+    left: 10%;
+}
+#photo1 img{
+    width: 100%;
+    height: 100%;
+}
+.icon-xiazai16{
+    font-size: 48px;
+    color:#fff;
+    text-align: center;
+    line-height: 220%;
+}
+.icon-icon_zhanghao{
+    font-size: 45px;
+    color:#fff;
+    text-align: center;
+    line-height: 220%;
+}
+#add{
+    width: 100%;
+    height: 18%;
+    position: absolute;
+    bottom: 0;
+    /* background-color: red; */
+    font-size: 79px;
+    text-align: center;
+    line-height: 1;
+    color: #fff;
+    font-weight: 100;
+    cursor: pointer;
+}
+#add:hover{
+    background-color:#3071d7;
+}
+#mid{
+    width: 30%;
+    height: 100%;
+    background-color: #e5e5e5;
+    position: absolute;
+    left: 12%;
+}
+#mid_top{
+    width: 100%;
+    height: 12%;
+    border-bottom: 1px solid #ccc;
+}
+#mid_top input{
+    width: 70%;
+    height: 50%;
+    border-radius: 20px;
+    margin:8% 15%;
+    outline:none;
+}
+#mid_body{
+    width: 100%;
+    height: 88%;
+    /* background-color: red; */
+}
+#mid_body ul{
+    width: 100%;
+    height:100%
+}
+#mid_body li{
+    width: 100%;
+    height: 25%;
+    list-style: none;
+    position: relative;
+    padding: 15px;
+}
+.change2{
+    width: 100%;
+    height: 25%;
+    list-style: none;
+    position: relative;
+    padding: 15px;
+    background-color: #fff;
+}
+#mbody_one_top{
+    width: 100%;
+    height: 65%;
+    /* background-color: green; */
+}
+#mbody_one_top1{
+    width: 26%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 100%;
+    overflow: hidden;
+}
+#mot1{
+    font-size: 16px;
+    color: #2d7bb9;
+    position: absolute;
+    top: 16%;
+    left: 37%;
+    font-weight: 700;
+}
+#mot2{
+    color: #ccc;
+    position: absolute;
+    top: 35%;
+    left: 37%;
+    font-size: 14px;
+}
+#mbody_one_body{
+    width: 100%;
+    height: 35%;
+    overflow: hidden; /*自动隐藏文字*/
+    text-overflow: clip;/*文字隐藏后添加省略号*/
+    /* white-space: nowrap;强制不换行 */
+    /* width: 19em;不允许出现半汉字截断 */
+    font-size: 12px;
+
+}
+#right{
+    width: 58%;
+    height: 100%;
+    position: absolute;
+    right: 0;
+}
+#ri_top{
+    width: 100%;
+    height: 12%;
+    border-bottom: 1px solid #ccc;
+    display:table 
+}
+#ri_top_p1{
+    width: 100%;
+    /* height: 100%; */
+    color: #2d7bb9;
+    font-size: 18px;
+    font-weight: 700;
+    /* line-height: 220%; */
+    vertical-align:middle; 
+    display:table-cell;
+    padding-left: 7%;
+}
+#ri_main{
+    width: 100%;
+    height: 88%;
+    /* background-color: red; */
+}
+#ri_body{
+    width: 100%;
+    height: 83%;
+    background-color: #f4f4f4;
+    border-bottom: 1px solid #ccc;
+    overflow: auto;
+    padding: 25px;
+}
+#right_body_1{
+    width: 50%;
+    height: 15%;
+    /* background-color: red; */
+    position: relative;
+}
+#rb11{
+    width: 23%;
+    height: 100%;
+    background-color: yellow;
+    border-radius: 100%;
+    overflow: hidden;
+}
+#rb12{
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-right: 7px solid #fff;
+    position: absolute;
+    left: 23%;
+    top: 18%;
+}
+#rb13{
+    width: 73%;
+    padding: 3px;
+    height: 75%;
+    background-color: #fff;
+    position: absolute;
+    left: 26%;
+    top: 5%;
+    border-radius: 3px;
+    font-size: 13px;
+}
+#rb16{
+    width: 23%;
+    height: 100%;
+    background-color: yellow;
+    border-radius: 100%;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+}
+#rb14{
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-left: 7px solid #3981f7;
+    position: absolute;
+    left: 73%;
+    top: 18%;
+}
+#rb15{
+    width: 73%;
+    padding: 3px;
+    height: 75%;
+    background-color: #3981f7;
+    position: absolute;
+    left: 0;
+    top: 5%;
+    font-size: 13px;
+    border-radius: 3px;
+}
+#right_body_2{
+    width: 50%;
+    height: 15%;
+    /* background-color: red; */
+    float: right;
+    position: relative;
+}
+#ri_foot{
+    width: 100%;
+    height: 17%;
+    /* background-color: red; */
+    padding: 23px;
+    position: relative;
+}
+.icon-xiaolian{
+    font-size: 20px;
+    color: #ccc;
+    line-height: 1.6;
+}
+#ri_foot input{
+    width: 60%;
+    height: 42%;
+    background-color: #fff;
+    position: absolute;
+    top: 29%;
+    left: 15%;
+    border-radius:6px;
+    outline: none;
+
+}
+.icon-fasong-tijiao{
+    font-size: 30px;
+    color: #ccc;
+    position: absolute;
+    top: 30%;
+    right: 12%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
