--- a/QQWeb/src/main/resources/static/css/zhuce.css
+++ b/QQWeb/src/main/resources/static/css/zhuce.css
@@ -103,4 +103,9 @@ html,body{
     border: none;
     border-radius: 4px;
     margin-top: 5%;
+    color: #fff;
+}
+#btn1 a{
+    text-decoration: none;
+    color: #fff;
 }
