--- a/QQWeb/src/main/resources/templates/person_main.html
+++ b/QQWeb/src/main/resources/templates/person_main.html
@@ -19,7 +19,7 @@
         <div id="body">
             <div id="head">
                 <img src="img/4.jpg" alt="">
-                <a href="zhuce.html">
+                <a href="picture">
                     <div id="head_1">+</div>
                 </a>
             </div>
@@ -32,13 +32,13 @@
             <p id="footp1">修改密码</p>
             <ul>
                 <li>&nbsp&nbsp&nbsp新密码：
-                    <input type="text">
+                    <input type="password" id="pass">
                 </li>
                 <li>确认密码：
-                    <input type="text">
+                    <input type="password" id="reps">
                 </li>
             </ul>
-            <div>确认修改</div>
+            <input type="submit" id="qrxg" value="确认修改">
         </div>
     </div>
 </div>
