--- a/QQWeb/src/main/resources/templates/index1_1.html
+++ b/QQWeb/src/main/resources/templates/index1_1.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="css/index1_1.css">
 <script src="js/jqku.js"></script>
 <script src="js/index1_1.js"></script>
+    <script src="js/find.js"></script>
 </head>
 <body>
+    <div id="username"></div>
     <div id="main">
         <div id="box">
             <div id="left">
@@ -39,8 +41,9 @@
                     <p id="af">×</p>
                 </div>
                 <div id="add_search">输入账号
-                    <input type="text">
-                    <div class="iconfont icon-sousuo">查找</div>
+                    <input type="text" id="name">
+                    <input type="submit" id="cz" value="查找" class="iconfont icon-sousuo">
+                    <!--<div class="iconfont icon-sousuo">查找</div>-->
                 </div>
                 <div id="add_result">
                     <p id="arp1">查找结果</p>
