--- a/QQWeb/src/main/resources/static/css/index1_1.css
+++ b/QQWeb/src/main/resources/static/css/index1_1.css
@@ -69,14 +69,24 @@ img{
     /* position: absolute; */
 
 }
-#add_search input{
+#name{
     width: 60%;
     height: 100%;
     outline: none;
     border-radius: 4px;
 }
+#cz{
+    width: 17%;
+    height: 117%;
+    margin-left: 17px;
+    background-color:#3782f5;
+    border: 0;
+}
 a{
     text-decoration: none;
+}
+#username{
+    display: none;
 }
 #add_search div{
     width: 18%;
