--- a/QQWeb/src/main/resources/templates/guanli.html
+++ b/QQWeb/src/main/resources/templates/guanli.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/guanli.css">
     <script src="js/jqku.js"></script>
+    <script src="js/guanli.js"></script>
 </head>
 <body>
     <div id="main">
@@ -17,22 +18,22 @@
             </div>  
             <div id="body">
                 <div id="add"><a href="zhuce.html">＋</a> </div>
-                <div id="fir">
-                    <div id="left">
-                        <div id="le_1">
+                <div class="fir">
+                    <!--<div class="left">-->
+                        <div class="le_1">
                             <img src="img/8.jpg" alt="">
                         </div>
-                        <p>Lucas</p>
+                        <p class="name">Lucas</p>
                         <h4>用户名密码</h4>
-                        <span>12344534460</span>
-                    </div>
-                    <div id="right">
+                        <span class="pass">12344534460</span>
+                    <!--</div>-->
+                    <!--<div class="right">-->
                         <ul>
-                            <li id="ri_1">修改头像</li>
-                            <li id="ri_2" style="margin:20% 0;">账号删除</li>
-                            <li id="ri_3">用户封禁</li>
+                            <li><input type="submit" value="修改头像" id="xgtx"></li>
+                            <li class="ri_2"><input type="submit" value="帐号删除" id="zhsc"></li>
+                            <li><input type="submit" value="用户封禁" id="yhfj"></li>
                         </ul>
-                    </div>
+                    <!--</div>-->
                 </div>
             </div>
         </div>
