修改添加好友的bug，实现后台管理删除用户及用户封禁的功能

--- a/QQWeb/src/main/resources/templates/guanli.html
+++ b/QQWeb/src/main/resources/templates/guanli.html
@@ -10,11 +10,12 @@
     <script src="js/guanli.js"></script>
 </head>
 <body>
+    <div id="password1"></div>
     <div id="main">
         <div id="box"> 
             <div id="top">
                 <span>后台管理</span>
-                <p><a href="index2.html">＜</a></p>
+                <p><a href="index2">＜</a></p>
             </div>  
             <div id="body">
                 <div id="add"><a href="zhuce.html">＋</a> </div>
@@ -29,9 +30,9 @@
                     <!--</div>-->
                     <!--<div class="right">-->
                         <ul>
-                            <li><input type="submit" value="修改头像" id="xgtx"></li>
-                            <li class="ri_2"><input type="submit" value="帐号删除" id="zhsc"></li>
-                            <li><input type="submit" value="用户封禁" id="yhfj"></li>
+                            <li><input type="submit" value="修改头像" class="xgtx"></li>
+                            <li class="ri_2"><input type="submit" value="帐号删除" class="zhsc"></li>
+                            <li><input type="submit" value="用户封禁" class="yhfj"></li>
                         </ul>
                     <!--</div>-->
                 </div>
