--- a/QQWeb/src/main/resources/templates/index1_1.html
+++ b/QQWeb/src/main/resources/templates/index1_1.html
@@ -51,9 +51,9 @@
                         <div id="re_img">
                             <img src="img/8.jpg" alt="">
                         </div>
-                        <p>TaeYong</p>
-                        <h4>浙江温州 男</h4>
-                        <span>+添加</span>
+                        <p id="friend">TaeYong</p>
+                        <!--<span>+添加</span>-->
+                        <input type="submit" id="tj" value="+添加">
                     </div>
                 </div>
             </div>
