--- a/QQWeb/src/main/resources/static/css/index1_1.css
+++ b/QQWeb/src/main/resources/static/css/index1_1.css
@@ -138,10 +138,11 @@ a{
     bottom: 15%;
     left: 26%;
 }
-#result span{
+#tj{
     width: 22%;
     height: 40%;
     background-color: #3782f5;
+    border: 0;
     position: absolute;
     top: 34%;
     right: 5%;
