实现返回头像功能

--- a/QQWeb/src/main/resources/templates/guanli.html
+++ b/QQWeb/src/main/resources/templates/guanli.html
@@ -18,11 +18,11 @@
                 <p><a href="index2">＜</a></p>
             </div>  
             <div id="body">
-                <div id="add"><a href="zhuce.html">＋</a> </div>
+                <div id="add"><a href="index_1">＋</a> </div>
                 <div class="fir">
                     <!--<div class="left">-->
                         <div class="le_1">
-                            <img src="img/8.jpg" alt="">
+                            <img src="img/8.jpg" alt="" id="prc">
                         </div>
                         <p class="name">Lucas</p>
                         <h4>用户名密码</h4>
