--- a/QQWeb/src/main/resources/templates/index1_1.html
+++ b/QQWeb/src/main/resources/templates/index1_1.html
@@ -49,7 +49,7 @@
                     <p id="arp1">查找结果</p>
                     <div id="result">
                         <div id="re_img">
-                            <img src="img/8.jpg" alt="">
+                            <img src="img/8.jpg" alt="" class="up">
                         </div>
                         <p id="friend">TaeYong</p>
                         <!--<span>+添加</span>-->
@@ -66,7 +66,7 @@
                         <li>
                             <div id="mbody_one_top">
                                 <div id="mbody_one_top1">
-                                   <a href="else.html"><img src="img/3.jpg" alt=""></a>
+                                   <a href="else"><img src="img/3.jpg" alt=""></a>
                                 </div>
                                 <p id="mot1">JaeHyun</p>
                                 <p id="mot2">09:00</p>
@@ -78,7 +78,7 @@
                         <li>
                             <div id="mbody_one_top">
                                 <div id="mbody_one_top1">
-                                        <a href="else.html"><img src="img/5.jpg" alt=""></a>
+                                        <a href="else"><img src="img/5.jpg" alt=""></a>
                                 </div>
                                 <p id="mot1">JaeMin</p>
                                 <p id="mot2">09:00</p>
@@ -90,7 +90,7 @@
                         <li>
                             <div id="mbody_one_top">
                                 <div id="mbody_one_top1">
-                                        <a href="else.html"><img src="img/6.jpg" alt=""></a>
+                                        <a href="else"><img src="img/6.jpg" alt=""></a>
                                 </div>
                                 <p id="mot1">RenJun</p>
                                 <p id="mot2">09:00</p>
@@ -102,7 +102,7 @@
                         <li>
                             <div id="mbody_one_top">
                                 <div id="mbody_one_top1">
-                                        <a href="else.html"><img src="img/7.jpg" alt=""></a>
+                                        <a href="else"><img src="img/7.jpg" alt=""></a>
                                 </div>
                                 <p id="mot1">ChenLe</p>
                                 <p id="mot2">09:00</p>
