--- a/QQWeb/src/main/resources/templates/person_main.html
+++ b/QQWeb/src/main/resources/templates/person_main.html
@@ -18,7 +18,7 @@
         </div>
         <div id="body">
             <div id="head">
-                <img src="img/4.jpg" alt="">
+                <img src="img/4.jpg" alt="" id="grtx">
                 <a href="picture">
                     <div id="head_1">+</div>
                 </a>
@@ -26,7 +26,7 @@
             <input type="text" id="ps" placeholder="个性签名请在这里填写">
             <input type="submit" id="get" value="保存">
             <div id="name"></div>
-            <div id="charm">❤0</div>
+            <div id="charm">❤</div>
         </div>
         <div id="foot">
             <p id="footp1">修改密码</p>
