实现部分功能 休息！

--- a/QQWeb/src/main/resources/static/css/person_main.css
+++ b/QQWeb/src/main/resources/static/css/person_main.css
@@ -71,7 +71,7 @@ img{
 #head{
     width: 13%;
     height: 38%;
-    background-color: #2a73d6;
+    /*background-color: #2a73d6;*/
     border-radius: 100%;
     position: absolute;
     top: 7%;
