开始尝试聊天功能其他功能基本实现

--- a/QQWeb/src/main/resources/static/css/guanli.css
+++ b/QQWeb/src/main/resources/static/css/guanli.css
@@ -69,6 +69,7 @@ img{
     /* background-color: #2a73d6; */
     overflow: auto;
     position: relative;
+    overflow: auto;
 }
 #add{
     width: 31%;
