--- a/QQWeb/src/main/resources/static/css/else.css
+++ b/QQWeb/src/main/resources/static/css/else.css
@@ -72,7 +72,7 @@ img{
 #head{
     width: 13%;
     height: 38%;
-    background-color: #2a73d6;
+    /*background-color: #2a73d6;*/
     border-radius: 100%;
     position: absolute;
     left: 44%;
