--- a/QQWeb/src/main/resources/static/css/index1_1.css
+++ b/QQWeb/src/main/resources/static/css/index1_1.css
@@ -123,6 +123,7 @@ a{
     /* background-color: red; */
     right: 5%;
     top: 20%;
+    overflow: auto;
 }
 #result p{
     color: #456d9e;
@@ -154,7 +155,7 @@ a{
 #re_img{
     width: 22%;
     height: 100%;
-    background-color: #2d7bb9;
+    /*background-color: #2d7bb9;*/
     border-radius: 100%;
     overflow: hidden;
 }
@@ -254,6 +255,7 @@ a{
     width: 100%;
     height: 88%;
     /* background-color: red; */
+    overflow: auto;
 }
 #mid_body ul{
     width: 100%;
