--- a/QQWeb/src/main/resources/templates/else.html
+++ b/QQWeb/src/main/resources/templates/else.html
@@ -34,10 +34,10 @@
             </div>
             <div id="body">
                 <div id="head">
-                    <img src="img/6.jpg" alt="" id="else" onclick="zan()">
+                    <img src="img/6.jpg" id="fp">
                 </div>
                 <p id="friendname">Lucas</p>
-                <h4>
+                <h4 id="ps">
                     死党二呆，其实，有你真好！
                 </h4>
                 <div id="charm">
