实现点赞以及返回赞数

--- a/QQWeb/src/main/resources/templates/else.html
+++ b/QQWeb/src/main/resources/templates/else.html
@@ -41,7 +41,7 @@
                     死党二呆，其实，有你真好！
                 </h4>
                 <div id="charm">
-                        <img src="img/1.png" alt="" id="cha">
+                        <img src="img/1.png" alt="" id="cha" onclick="dianzan()">
                     </div>
                     <div id="charm1">0</div>
             </div>
