--- a/QQWeb/src/main/resources/templates/person_main.html
+++ b/QQWeb/src/main/resources/templates/person_main.html
@@ -26,7 +26,8 @@
             <input type="text" id="ps" placeholder="个性签名请在这里填写">
             <input type="submit" id="get" value="保存">
             <div id="name"></div>
-            <div id="charm">❤</div>
+            <span id="charm">❤</span>
+            <span id="num">asdasd</span>
         </div>
         <div id="foot">
             <p id="footp1">修改密码</p>
