实现后台修改头像的功能

--- a/QQWeb/src/main/resources/templates/guanli.html
+++ b/QQWeb/src/main/resources/templates/guanli.html
@@ -30,7 +30,7 @@
                     <!--</div>-->
                     <!--<div class="right">-->
                         <ul>
-                            <li><input type="submit" value="修改头像" class="xgtx"></li>
+                            <li><a href="picture"><input type="submit" value="修改头像" class="xgtx"></a></li>
                             <li class="ri_2"><input type="submit" value="帐号删除" class="zhsc"></li>
                             <li><input type="submit" value="用户封禁" class="yhfj"></li>
                         </ul>
